--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <a class="button button-linkedin" href="https://www.linkedin.com/in/jorgelts/"><img class="icon" src="icons/linkedin.svg">LinkedIn</a> <br>
         <!-- spekerdeck -->
         <a class="button button-slides" href="https://speakerdeck.com/jorgelts"><img class="icon" src="icons/slides.svg">Slides</a> <br>
+        <!-- e-mail -->
+        <a class="button button-mail" href="mailto:jorge.mndza07@gmail.com"><img class="icon" src="icons/mail.svg">Envíame un mail</a> <br>
         <br>
         <footer>
           <p>Código para esta página <a href="https://github.com/jorgeLTS/jorgeLTS.github.io">acá</a>.</p>
